[gd_scene load_steps=7 format=3 uid="uid://wtmmioebuao1"]

[ext_resource type="Script" path="res://Scripts/gold.gd" id="1_5xyj3"]
[ext_resource type="Script" path="res://Scripts/collect.gd" id="1_onng1"]
[ext_resource type="Texture2D" uid="uid://cnos8wwxp0kyf" path="res://Textures/Tilemaps/DungeonCave/Items.png" id="2_78yps"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5i2ws"]
size = Vector2(14, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tcaiq"]
size = Vector2(14, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xgu2b"]
size = Vector2(14, 14)

[node name="Gold" type="Node2D"]
script = ExtResource("1_5xyj3")

[node name="LargeGold" type="Area2D" parent="."]
visible = false
script = ExtResource("1_onng1")

[node name="Sprite2D" type="Sprite2D" parent="LargeGold"]
texture = ExtResource("2_78yps")
region_enabled = true
region_rect = Rect2(64, 128, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LargeGold"]
shape = SubResource("RectangleShape2D_5i2ws")

[node name="MediumGold" type="Area2D" parent="."]
visible = false
script = ExtResource("1_onng1")

[node name="Sprite2D" type="Sprite2D" parent="MediumGold"]
texture = ExtResource("2_78yps")
region_enabled = true
region_rect = Rect2(80, 128, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MediumGold"]
shape = SubResource("RectangleShape2D_tcaiq")

[node name="SmallGold" type="Area2D" parent="."]
visible = false
script = ExtResource("1_onng1")

[node name="Sprite2D" type="Sprite2D" parent="SmallGold"]
texture = ExtResource("2_78yps")
region_enabled = true
region_rect = Rect2(96, 128, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SmallGold"]
shape = SubResource("RectangleShape2D_xgu2b")

[connection signal="area_entered" from="LargeGold" to="LargeGold" method="_on_area_entered"]
[connection signal="area_entered" from="MediumGold" to="MediumGold" method="_on_area_entered"]
[connection signal="area_entered" from="SmallGold" to="SmallGold" method="_on_area_entered"]
